creusot/tests/should_fail/prusti/traits/curr.stderr
error[creusot]: the expression's lifetime `'a` must match the current time slice `'now` (found `&'a mut Y`, expected `&'now mut _`)
  --> curr.rs:13:5
   |
13 |     fn test<'now, Y>(x: &'now mut Y) -> &'now mut Y {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

